--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
+  http: ^0.13.5
+  table_calendar: ^3.0.6
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
 
