--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   table_calendar: ^3.0.6
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
